make sure the width is not overflowing with the footer padding

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -5,7 +5,7 @@ footer {
   width: 100vw;
   background-color: #F1F1F1;
   box-shadow: 0px -3px 3px #C8C9C7;
-  padding: 4px;
+  padding: 4px 0;
 }
 
 .footer-content {
